<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_add_book"
            android:icon="@drawable/ic_add_book"
            android:title="@string/nav_add_book" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_book"
            android:title="@string/nav_favourites" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/nav_logOut" />
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_log_in"
            android:title="@string/nav_logIn" />
        <item
            android:id="@+id/nav_sign_up"
            android:icon="@drawable/ic_add_person"
            android:title="@string/nav_signUp" />
    </group>


</menu>