<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingTop="1dp"
    android:paddingRight="18dp"
    android:paddingBottom="1dp"
    tools:context=".activities.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="219dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="219dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:contentDescription="TODO"
                    android:padding="16dp"
                    android:scaleType="fitXY" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_choose_gallery_profile"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/choose_gallery" />

                <Button
                    android:id="@+id/button_take_photo_profile"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/take_photo" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-7dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/text_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-7dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastName_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/text_lastName"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-7dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-7dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/text_password"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-7dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordConfirm_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/text_passwordCheck"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#fff" />
            </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_confirm_change"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/confirm_change_profile"
                android:textAllCaps="false"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="514dp" />

            <Button
                android:id="@+id/button_change_profile"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/change_profile"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/cancel_change_profile"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/button_cancel_change_profile"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />



        </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>